;;;; -*- coding: utf-8; fill-column: 78 -*-

changes in sbcl-2.5.11 relative to sbcl-2.5.10:
  * incompatible change: the compiler's internal representation of "source
    paths" for unquoted forms within backquotes has changed.  Other developer
    tools using this representation, including callers of some exported
    SB-INTROSPECT functions, will misreport the location of signalled
    conditions and/or definitions in top-level forms including backquotes and
    commas.
  * minor incompatible change: undefined syntaxes following
    *READ-BASE*-related reader macros (such as #B, #O, #X, #R) now signal
    reader errors.
  * minor incompatible change: the convenience reader syntax pkg::(...) no
    longer triggers package locks for the PKG package.
  * minor incompatible change: building with the SB-DEVEL feature inhibits
    identical code folding at the end of the build of the SBCL system itself.
  * enhancement: improve the compiler's knowledge of the dimensions of the
    result of MAKE-ARRAY.  (lp#2130477, thanks to Vasily Postnicov)
  * enhancement: the SB-COVER contributed module has been made substantially
    more robust; collecting coverage no longer inhibits various CLOS
    optimizations.  (For SBCL developers, it is now capable of reporting on
    the coverage of the SBCL system itself, provided it is built with the new
    :SB-COVER-FOR-INTERNALS build-time feature.)
  * bug fix: REQUIREing the SB-MD5 contributed module no longer installs a
    compiler optimization policy restriction of SPACE being at least 1.
  * bug fix: don't miscompute the sizes of garbage collector data structures
    for running with dynamic space heap sizes above 128GiB.
  * bug fix: ENOUGH-NAMESTRING when the pathname and defaults arguments are
    both logical pathnames with the same host returns a shorter string than
    previously.
  * bug fix: the compiler retains fewer temporary data structures when
    compiling code with coverage data.